@@ -1,3 +1,5 @@
+* Add Feature test FUNCTION_TO_STRING_RETURNS_SOURCE in preparation for Class rewrite. [jddalton]
+
 * Add Element#isFragment to detect if an element is an unattached fragment or a child of one. [jddalton]
 
 * Fix issue, in quirks mode, where versions of Safari, before 3.1.2, treat class names case-insensitively in Selector/$$ queries. [#390 state:resolved] [Andrew Dupont, Brice, kangax]
